[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybmodes"
version = "1.14.0"
description = "Python finite-element library for wind turbine blade and tower modal analysis (OpenFAST/ElastoDyn)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Jae Hoon Seo", email = "jaehoon.seo@inha.ac.kr" },
]
maintainers = [
    { name = "Jae Hoon Seo", email = "jaehoon.seo@inha.ac.kr" },
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://github.com/SMI-Lab-Inha/pybmodes"
Repository = "https://github.com/SMI-Lab-Inha/pybmodes"
Issues = "https://github.com/SMI-Lab-Inha/pybmodes/issues"
Changelog = "https://github.com/SMI-Lab-Inha/pybmodes/blob/master/CHANGELOG.md"

[project.scripts]
pybmodes = "pybmodes.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
    "numpy",
    "scipy",
    # Tests/test_windio.py exercises the WindIO reader; bundle the
    # [windio] dep here so the suite runs under `pip install -e .[dev]`.
    "pyyaml>=6",
]
plots = [
    "matplotlib>=3.7",
]
windio = [
    # WindIO ontology .yaml input (Tower.from_windio). Opt-in: the
    # pyBmodes runtime core stays numpy+scipy only — same stance as
    # [plots]/[notebook].
    "pyyaml>=6",
]
notebook = [
    # Used by ``tests/test_notebooks.py`` to execute the bundled
    # walkthroughs headlessly. ``ipykernel`` provides the Python
    # kernel ``nbclient`` shells out to; ``nbformat`` is the
    # in-memory notebook reader. None of these are imported by the
    # ``pybmodes`` package itself — they're test-only deps.
    "nbclient>=0.9",
    "nbformat>=5.9",
    "ipykernel>=6.20",
    # The notebooks themselves ``import matplotlib.pyplot`` and
    # ``from pybmodes.plots import …`` in their setup cells, so a
    # contributor who runs ``pip install -e ".[dev,notebook]"`` and
    # then ``pytest`` would otherwise see a ModuleNotFoundError
    # from inside nbclient rather than the documented clean SKIP.
    # Bundle matplotlib here so the ``[notebook]`` extra is
    # self-sufficient for the notebook tests. ``[plots]`` and
    # ``[notebook]`` overlap on matplotlib by design; that's
    # cheaper than asking contributors to remember to pair them.
    "matplotlib>=3.7",
]
docs = [
    # Sphinx documentation site (hosted on Read the Docs; see
    # .readthedocs.yaml). MyST-parser lets the site include the
    # existing CHANGELOG.md / VALIDATION.md / README.md directly
    # via ``include`` directives, so docs and the markdown source
    # stay in lockstep.
    # Pin Sphinx to the 8.x line: Sphinx 9.0 (released 2026) emits
    # ``RemovedInSphinx10Warning`` deprecations that fail strict
    # (-W) builds until the ecosystem catches up. Relax the upper
    # pin once a 9-compatible plugin set is available.
    "sphinx>=7,<9",
    "sphinx-rtd-theme>=2",
    "myst-parser>=2",
    "sphinx-copybutton>=0.5",
    # pybmodes' public API references numpy / scipy / matplotlib
    # in its docstrings; intersphinx pulls in their objects.inv.
    "numpy",
    "scipy",
    "matplotlib>=3.7",
    "pyyaml>=6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# ``py.typed`` advertises inline type info (PEP 561).
# ``_examples/**/*`` vendors the example bundle (cases/sample_inputs/
# and reference_decks/, both now living under
# ``src/pybmodes/_examples/``) into the wheel so
# ``pybmodes examples --copy <dir>`` works for users who installed
# from a wheel rather than a source checkout. Everything inside
# ``_examples/`` is data — the .py helpers (``verify.py``,
# ``reference_turbines/build.py``) are intended to be run after
# vendoring out, not imported.
pybmodes = ["py.typed", "_examples/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run skips integration tests so a fresh clone gets a green
# pytest with no external data. Run integration tests explicitly with
# ``pytest -m integration`` (requires local OpenFAST / BModes decks).
# Coverage reporting is on by default with an enforced floor (see
# ``[tool.coverage.report] fail_under`` below). The default
# (self-contained) run sits around 87 % branch+line coverage; the floor
# is set a couple of points under that so a regression that drops a
# core solver / parser / workflow path fails the run, without being so
# tight that an integration-only addition (those paths only run under
# the ``integration`` marker) trips it. Raise the floor as coverage
# climbs; never lower it without justification. The floor gates the
# default (and full) run; a deliberate *subset* run such as
# ``pytest -m integration`` on its own covers little, so pass
# ``--no-cov`` for those (CI does this on its integration step).
addopts = """\
    -v \
    -m 'not integration' \
    --cov=pybmodes \
    --cov-report=term-missing:skip-covered\
"""
markers = [
    "integration: requires external OpenFAST / BModes reference decks under external/",
    "slow: longer numerical validation cases (>1 s wall time per test)",
]

[tool.coverage.run]
branch = true
source = ["pybmodes"]
omit = [
    "src/pybmodes/cli.py",            # exercised through CLI smoke tests
    # Render-only matplotlib helpers (optional [plots] extra) stay
    # omitted; the public, closed-form-tested environmental module
    # (kaimal/jonswap + the placement diagram) counts toward coverage.
    "src/pybmodes/plots/mode_shapes.py",
    "src/pybmodes/plots/style.py",
]

[tool.coverage.report]
# Enforced quality gate. The default self-contained run exceeds this;
# CI fails if a change drops below it. ``pytest-cov`` reads this floor.
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    # Defensive overload stubs carry only ``...`` bodies.
    "^\\s*\\.\\.\\.$",
    "@overload",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Beyond the E/F/W/I baseline: pyupgrade (UP), bugbear (B),
# comprehensions (C4), simplify (SIM), flake8-pie (PIE), and the
# Ruff-native (RUF) checks. A few rules are deliberately silenced —
# see ``ignore`` for the rationale.
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "PIE", "RUF"]
ignore = [
    # Ambiguous-unicode flags fire on legitimate engineering glyphs
    # (×, ≤, ≥, °, μ, …) that appear throughout this structural-
    # dynamics library's docstrings, comments, and strings — they are
    # intentional notation, not homoglyph typos.
    "RUF001",
    "RUF002",
    "RUF003",
    # zip(..., strict=...) demands a per-call length-equality decision;
    # a blanket strict=False would mask real mismatches. Deferred to a
    # focused pass rather than auto-applied here.
    "B905",
    # pytest.raises/warns(match=...) pattern tightening — deferred to a
    # dedicated test-quality pass.
    "RUF043",
    # ``dict(key=val, …)`` is idiomatic and readable for the matplotlib
    # prop dicts and keyword-style config records in this codebase;
    # forcing ``{...}`` literals would not improve clarity.
    "C408",
    # ``if/else`` blocks are kept over one-line ternaries where the
    # branches are non-trivial (Campbell label/MAC assembly) and read
    # more clearly spelled out.
    "SIM108",
    # ``__all__`` lists are grouped by role (types → readers → writers
    # → adapters → internal re-exports) with explanatory comments, not
    # alphabetised — the grouping is the documentation.
    "RUF022",
    # Tuple-unpack names are kept even when locally unused because they
    # document the shape of the returned record — deferred.
    "RUF059",
    # One broad ``pytest.raises(Exception)`` assertion — narrowing it
    # needs per-test exception analysis; deferred to a test-quality pass.
    "B017",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
# Floor raised for ALL modules (verified clean across the package):
# redundant casts, non-overlapping equality, implicit-Optional bans,
# and the ``--extra-checks`` bundle. These don't require full type
# coverage (parsers stay loose on untyped defs — see the per-module
# overrides) but they catch a real class of latent bug without it.
#
# ``warn_unused_ignores`` is deliberately NOT global: it is
# environment-fragile for loose modules that import opt-in,
# stub-less third-party packages (e.g. ``import yaml  # type:
# ignore[import-untyped]`` in io/windio.py), where the ignore is
# "used" under one mypy/stub combination and "unused" under another.
# It is enabled per-module below for the strict, fully-typed surface,
# where the set of needed ignores is deterministic across environments.
warn_redundant_casts = true
strict_equality = true
no_implicit_optional = true
extra_checks = true

# Per-module strict overrides. Modules listed here run under
# stricter mypy checks: untyped function definitions, untyped
# decorators, missing return-type annotations, and any-typed
# expressions are errors. Used to ratchet typing rigor on the
# stable core (fitting / solver / result dataclass / pipeline
# orchestration) without forcing the same bar on input-driven
# parsers where ``Any`` from regex-match groups is unavoidable.
# Add modules to this list as their typing is cleaned up; never
# remove modules without justification.
[[tool.mypy.overrides]]
module = [
    "pybmodes.fitting.poly_fit",
    "pybmodes.fem.solver",
    "pybmodes.models.result",
    "pybmodes.models._pipeline",
    # Phase 1 PR A2 — strict typing extended to the public-API core.
    "pybmodes.models.tower",
    "pybmodes.models.blade",
    "pybmodes.campbell",
    "pybmodes.mac",
    "pybmodes.io.bmi",
    "pybmodes.options",
    # 1.8.2 static-review ratchet — verified clean under the strict
    # flags (`mypy --disallow-untyped-defs --disallow-incomplete-defs
    # --warn-return-any`). Parsers and matplotlib helpers stay loose;
    # everything below is pure-logic / typed-dataclass surface.
    "pybmodes.report",
    "pybmodes.io._serialize",
    "pybmodes.io.wamit_reader",
    "pybmodes.fem.assembly",
    "pybmodes.fem.boundary",
    "pybmodes.fem.element",
    "pybmodes.fem.gauss",
    "pybmodes.fem.nondim",
    "pybmodes.fem.normalize",
    "pybmodes.fem.platform_modes",
    "pybmodes.mooring._catenary",
    "pybmodes.mooring._rotation",
    "pybmodes.mooring._moordyn_parser",
    "pybmodes.campbell._mac",
    "pybmodes.campbell._classify",
    "pybmodes.campbell._models",
    "pybmodes.campbell._plot",
    "pybmodes.campbell._sweep",
    "pybmodes.campbell.result",
    # 1.14.0 ratchet — pure-logic / typed-dataclass modules verified
    # clean under the strict flags.
    "pybmodes.checks",
    "pybmodes.coords",
    "pybmodes.io.errors",
    "pybmodes.workflows._base",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
